--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -367,12 +367,18 @@ c.X = 10 //匿名展开
 c.Point.X = 10 //匿名未展开，2种方式是一致的
 ```
 
-- vim多行注释  
+- vim多行注释，查找替换  
 :20,30 s/^/#/g 第20到30行用 # 注释掉。  
 :20,30 s/^#//g 取消注释  
 :4,10 s/^[^I ]\+// 去掉行首的空白字符  
 用 . 表示当前行。  
 :.,30 s/^/#/g  
+/string （sting为查找对象）正向查找  
+？string 反向查找  
+：m,n> 向右移动一个tab  
+：m,n< 向左移动一个tab  
+vim ~/.vimrc  当前用户vim配置  
+vim /etc/vim/vimrc 系统vim配置  
 
 - json
     - func Marshal(v interface{}) ([]byte, error) //go类型转成json
@@ -521,6 +527,181 @@ func add(x int) (z int) {
 
 - go函数参数是`没有默认参数`的
 - func Sin(x float64) float64 //没有函数体，说明这个函数使用的GO以外的语言实现，这是声明定义了该函数的签名，此处Sin使用汇编语言实现
+
+- golang.org/x/net 安装方法
+为了使包的导入方式不变，我们需要在src目录下面构造目录结构  
+$mkdir -p $GOPATH/src/golang.org/x/  
+$cd $GOPATH/src/golang.org/x/  
+$git clone https://github.com/golang/net.git net  
+$go install net  
+
+- 遍历HTML树  
+
+```go
+package main
+
+import(
+    "fmt"
+    "os"
+    "net/http"
+
+    "golang.org/x/net/html"
+)
+
+//golang.org/x/net/html定义的Node节点类型
+type Node struct {
+    Type                    NodeType
+    Data                    string
+    Attr                    []Attribute
+    FirstChild,NextSibling  *Node
+}
+
+type NodeType int32
+
+const (
+    ErrorNode NodeType = iota
+    TextNode
+    DocumentNode
+    ElementNode
+    CommentNode
+    DoctypeNode
+)
+
+type Attribute struct {
+    Key,Val string
+}
+
+//遍历属性标签a超链接href的地址
+func visit(links []string,n *html.Node) []string {
+    if n.Type == html.ElementNode && n.Data == "a" {
+        for _,a := range n.Attr {
+            if a.Key == "href" {
+                links = append(links,a.Val)
+            }
+        }
+    }
+
+    for c := n.FirstChild;c != nil;c = c.NextSibling {
+        links = visit(links,c)
+    }
+
+    return links
+}
+
+//遍历节点标签
+func outline(stack []string,n *html.Node) {
+    if n.Type == html.ElementNode {
+        stack = append(stack, n.Data)
+        fmt.Println(stack)
+    }
+
+    for c := n.FirstChild; c != nil; c = c.NextSibling {
+        outline(stack,c)
+    }
+}
+
+func main(){
+    url := "https://github.com/smakry"
+    resp,err := http.Get(url)
+    if err != nil {
+        fmt.Fprintf(os.Stderr,"fetch err:%v\n",err)
+        os.Exit(1)
+    }
+
+    doc,err := html.Parse(resp.Body)
+    resp.Body.Close()
+    if err != nil {
+        fmt.Fprintf(os.Stderr,"err:%s\n",err)
+        os.Exit(1)
+    }
+
+    //outline(nil,doc)
+
+	for _, link := range visit(nil, doc) {
+		fmt.Println(link)
+	}
+}
+
+```
+
+- Go的函数调用栈不同于其它语言的大小在64kb到2MB之间，`Go实现可变长的栈`，随使用而增长，可达到1GB左右的上限
+- Go语言的垃圾回收机制将回收未使用的内存，但不能指望它会释放未使用的操作系统资源，比如打开的文件已经网络连接，必须下显示地关闭它们  
+
+- 匿名函数  
+
+```go
+func test() func() int {
+    var x int
+    return func () int {
+        x++
+        return x * x
+    }
+}
+
+func main(){
+    fn := test() //fn保存的是匿名函数func() int {x++ return x * x}地址，所以x变量对于fn是外部变量
+
+    fmt.Println(fn()) //1
+    fmt.Println(fn()) //4
+    fmt.Println(test()()) //1
+    fmt.Println(test()()) //1
+}
+
+```
+
+- 匿名函数需要进行递归，必须先声明一个变量然后将匿名函数赋给这个变量。如果将两个步骤合并成一个声明，函数字面量将不能存在于visitAll变量的作用域中，这样也就不能递归地调用自己（`如果定义一句的话，就是先有匿名函数本体，才有变量visitAll`，如果是先声明变量，那是先有变量visitAll匿名函数内部就能看到visitAll这个变量）  
+
+```go
+//深度遍历拓扑图
+package main
+
+import(
+    "fmt"
+    "sort"
+)
+
+var prereqs = map[string][]string {
+    "algorithms":{"data structures"},
+    "calcules":{"linear algebra"},
+    "compilers":{
+        "data structures",
+        "formal languages",
+        "computer organization",
+    },
+    "data structures":{"discreate math"},
+    "databases":{"data structures"},
+}
+
+func topoSort(m map[string][]string) []string {
+    var order []string
+    seen := make(map[string]bool)
+    var visitAll func(items []string)
+    visitAll = func(items []string) {
+        for _, item := range items {
+            if !seen[item] {
+                seen[item] = true
+                visitAll(m[item])
+                order = append(order, item)
+            }
+        }
+    }
+
+    var keys []string
+    for key := range m {
+        keys = append(keys, key)
+    }
+    sort.Strings(keys) //未sort顺序是随机的
+    visitAll(keys)
+    return order
+}
+
+func main(){
+    for i, course := range topoSort(prereqs) {
+        fmt.Printf("%d:\t%s\n", i + 1, course)
+    }
+}
+
+```
 
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
