--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -703,6 +703,94 @@ func main(){
 
 ```
 
+- 捕获迭代变量（迭代变量的内存地址是一致的），通过创建临时变量（每次`迭代都重新分配了地址空间`）  
+  
+```go
+func main(){
+    arry := []string{"1","2","4","5","6","7"}
+
+    var temp []string
+    for _, v := range arry {
+        dir := v //临时变量dir地址是不同的，而迭代变量v地址是一致的
+        fmt.Printf("%p,%p\n",&v,&dir)
+        temp = append(temp, v)
+    }
+
+    fmt.Println(temp)
+}
+
+/*输出结果：
+0xc000010200,0xc000010210
+0xc000010200,0xc000010230
+0xc000010200,0xc000010240
+0xc000010200,0xc000010250
+0xc000010200,0xc000010260
+0xc000010200,0xc000010270
+[1 2 4 5 6 7]
+*/
+``` 
+
+- 变长函数的类型（参数可变长）和一个带有普通slice参数的函数类型不相同
+    - func f(...int) {} //变长函数（注意省略号位置）,类型是func(...int)   
+    - func g([]int) {} //类型是func([]int)  
+
+- defer语句函数或者方法延迟调用。在调用之前加上关键字defer，参数为当前defer调用时候的值，defer的执行被推迟到`包含defer语句函数执行结束之后才被执行到`（return之后，那么可以操作到返回值），且`按照调用defer语句顺序的倒叙执行`（defer调用入栈（参数也入栈），直到当前函数执行结束再从栈取出执行？）。在许多文件系统中，尤其是NFS，`写错误推迟到了文件关闭的时候`，所以如果文件关闭是延迟调用的话，最后文件操作失败会导致数据丢失。  
+
+```go
+func test(i int) {
+    fmt.Println("call:",i)
+}
+
+func main(){
+    var a int = 1
+    a++
+    fmt.Println(a)
+    defer test(a + 11)
+    a++
+    fmt.Println(a)
+    defer test(a + 22)
+}
+
+/*输出结果
+2
+3
+call: 25
+call: 13
+*/
+```
+
+```go
+//defer用于调试
+func test(msg string) func() {
+    start := time.Now()
+    log.Printf("enter %s", msg)
+    return func() {
+        log.Printf("exit %s (%s)\n", msg, time.Since(start))
+    }
+}
+
+func main(){
+    defer test("main")() //注意这里的()不能少，相当于先调用test("main")，再延迟调用返回的匿名函数
+    time.Sleep(2 * time.Second)
+}
+
+```
+
+```go
+func test(i int) (res int) {
+    defer func(){ res += i}() //defer调用可以操作到最后的返回值res，因为defer在return之后执行
+    return i + i
+}
+
+func main(){
+    fmt.Println(test(2)) //6
+}
+
+```
+
+- Go的宕机机制让`延迟执行的函数`在栈清理之前调用（可用延迟函数转移堆栈信息用于排查）；defer panic recover构成异常处理机制。`利用recover处理panic指令，defer必须在panic之前声明，否则当panic时，recover无法捕获到panic`    
+<https://www.jianshu.com/p/0cbc97bd33fb> 
+
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
 
@@ -723,6 +811,32 @@ var(
 
 - 局部变量声明未使用编译错误，全局变量声明未使用是允许的  
 
+```go
+package main
+
+import(
+    "fmt"
+    "runtime"
+)
+
+func f(x int) {
+    fmt.Printf("f(%d)\n", x + 0 / x)
+    defer fmt.Printf("defer %d\n", x)
+    f(x - 1)
+}
+
+func printStack() {
+    var buf [4096]byte
+    n := runtime.Stack(buf[:], false) //转存堆栈信息
+
+    fmt.Println(string(buf[:n])) 
+}   
+
+func main() {
+    defer printStack()
+    f(3)
+}  
+```
 
 ### 常量
 - iota常量（可被编译器修改的常量），`const出现iota重置为0`。const`语句块中每行+1`
