--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -326,26 +326,6 @@ fmt.Printf("%T,%[1]q,%T",graph["sdf"],graph["sdf"]["ssss"]) //结果：map[strin
 ```
 
 - linux结束符ctrl + d
-- “.”同样适用于结构体相当于其它语言的“->”
-
-```go
-type employee struct {
-    id int
-    name string
-}
-
-func main(){
-    var n1 employee
-    n1.id = 1
-
-    var n2 *employee = &n1
-    (*n2).id = 2
-	n2.id = 12 //与(*n2).id等价的
-
-    fmt.Println(n1.id,n2.id) //12 12
-}
-	
-```
 
 - 结构体
     - 结构体是否能比较取决于结构体成员变量是否都能够比较
@@ -788,7 +768,7 @@ func main(){
 
 ```
 
-- Go的宕机机制让`延迟执行的函数`在栈清理之前调用（可用延迟函数转移堆栈信息用于排查）；defer panic recover构成异常处理机制。`利用recover处理panic指令，defer必须在panic之前声明，否则当panic时，recover无法捕获到panic`    
+- Go的宕机机制让`延迟执行的函数在栈清理之前调用`（可用延迟函数转移堆栈信息用于排查）；defer panic recover构成异常处理机制。`利用recover处理panic指令，defer必须在panic之前声明，否则当panic时，recover无法捕获到panic`    
 <https://www.jianshu.com/p/0cbc97bd33fb> 
 
 ```go
@@ -817,6 +797,203 @@ func main() {
     f(3)
 }  
 ```
+
+- 方法
+    - func (p Point) Distance() float64 表达式p.Disatance称作选择子（为p选择合适的子方法）  
+    - Go可以将方法绑定到任何类型上（如数字、字符串、slice、map甚至函数等定义附加行为）
+    - (*Point).ScaleBy，圆括号必须，没有表达式被解析*(Point.ScaleBy)
+    - 习惯上遵循如果类型的任何一个方法是使用指针接收者，那么所有的该类型的方法都应该使用指针接收（虽然部分方法不一定需要使用指针接收）(2种方式定义的方法都属于该类型的方法)  
+    - 本身是指针类型不能作为接收者（假设可以，那么*指针类型是不是跟原有的类型混淆）
+
+```go
+type Point struct {
+    X, Y float64
+}
+
+type PP *Point
+
+// PP作为接收者是非法的
+func (x PP) test(){ 
+
+}
+
+```
+
+- “.”同样适用于结构体相当于其它语言的“->”，go编译器会对变量进行隐式的转换（必须`能够隐式的转换`），合法的方法调用表达式有以下几种：
+
+```go
+type Point struct {
+    X, Y float64
+}
+
+//接收者Point类型
+func (p Point) Distance(q Point) float64 {
+    return math.Hypot(q.X - p.X, q.Y - p.Y)
+}
+
+func main() {
+    a := Point{ 10, 11}
+    b := Point{ 11, 12}
+
+    fmt.Println(b.Distance(a)) //合法，Point类型
+    fmt.Println(Point{1,2}.Distance(a)) //合法，Point类型
+    fmt.Println((&Point{2,3}).Distance(a)) //合法，*Point类型隐式转成Point类型
+}	
+```
+
+```go
+type Point struct {
+    X, Y float64
+}
+
+//接收者*Point类型
+func (p *Point) Distance(q Point) float64 {
+    return math.Hypot(q.X - p.X, q.Y - p.Y)
+}
+
+func main() {
+    a := Point{ 10, 11}
+    b := Point{ 11, 12}
+
+    fmt.Println(b.Distance(a)) //合法，Point类型转成*Point类型
+//  fmt.Println(Point{1,2}.Distance(a)) //不合法，类型字面量无法获取地址不能隐式转换
+    fmt.Println((&Point{2,3}).Distance(a)) //合法，*Point类型
+}
+```
+
+- Go匿名类型展开，查找`先在当前类型的方法中查找`，再到成员类型中查找方法，当`同一级出现同名的会报错`（模拟两可选择错误，但可以明确指明调用哪个成员的方法）。
+
+```go
+type t1 struct {}
+
+func (t t1) test() {
+    fmt.Println("t1test")
+}
+
+type t2 struct {}
+
+func (t t2) test() {
+    fmt.Println("t2test")
+}
+
+type t3 struct {
+    t1
+}
+
+type t4 struct {
+    t3
+}
+
+func (t t4) test() {
+    fmt.Println("t4test")
+}
+
+type t5 struct {
+    t1
+    t2
+}
+
+func main() {
+    var a t4
+    a.test() //t4test
+
+    var b t5
+    b.t1.test() //t1test
+
+    var b t5
+    b.test() //ambiguous selector b.test (test模棱两可)
+}
+
+```
+
+- vim 滚屏
+Ctrl + F 屏幕向下滚动一屏  
+Ctrl + B 屏幕向上滚动一屏  
+Ctrl + E 屏幕向下滚动一行  
+Ctrl + Y 屏幕向上滚动一行  
+Ctrl + D 屏幕向下滚动半屏  
+Ctrl + U 屏幕向上滚动半屏  
+
+- 位向量（使用`二进制位做数据存储`），以下例子使用“二维”数组存储（一维存储64个数据，二维也存储64个数据）
+
+```go
+package main
+
+import(
+    "fmt"
+    "bytes"
+)
+
+type IntSet struct {
+    words []uint64
+}
+
+func (s *IntSet) Has(x int) bool {
+    word, bit := x / 64, uint(x % 64)
+    return word < len(s.words) && s.words[word] & (1 << bit) != 0
+}
+
+func (s *IntSet) Add(x int) {
+    word, bit := x / 64, uint(x % 64)
+    fmt.Println(word,bit)
+    for word >= len(s.words) {
+        s.words = append(s.words, 0)
+    }
+
+    s.words[word] |= 1 << bit
+}
+
+func (s *IntSet) UnionWith(t *IntSet) {
+    for i, tword := range t.words {
+        if i < len(s.words) {
+            s.words[i] |= tword
+        } else {
+            s.words = append(s.words, tword)
+        }
+    }
+}
+
+func (s *IntSet) String() string {
+    var buf bytes.Buffer
+    buf.WriteByte('{')
+    for i, word := range s.words {
+        if word == 0 {
+            continue
+        }
+
+        for j := 0; j < 64; j++ {
+            if word & (1 << uint(j)) != 0 {
+                if buf.Len() > len("{") {
+                    buf.WriteByte(' ')
+                }
+                fmt.Fprintf(&buf, "%d", 64 * i + j)
+            }
+        }
+    }
+
+    buf.WriteByte('}')
+    return buf.String()
+}
+
+func main() {
+    var x, y IntSet
+    x.Add(1)
+    x.Add(144)
+    x.Add(9)
+    fmt.Println(x.String())
+
+    y.Add(9)
+    y.Add(42)
+    fmt.Println(y.String())
+
+    x.UnionWith(&y)
+    fmt.Println(x.String())
+    fmt.Println(x.Has(9), x.Has(123))
+}
+
+```
+
+- Go封装一个对象，必须使用结构体（通过大小写是否导出），Go封装的单元是包而不是类型  
 
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
