--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -14,7 +14,7 @@ tags: GO 阅读笔记
 
 ## Go笔记
 
-Go强类型化的语言，具有垃圾回收机制，并显示支持并编程，Go原生地支持Unicode，可以处理所有国家的语言  
+Go强类型化的语言，具有垃圾回收机制，并显示支持并编程，Go原生地支持Unicode，可以处理所有国家的语言。Go静态类型语言，类型仅仅是一个编译时的概念。  
 <https://github.com/golang/go/wiki/NonEnglish>  
 
 - GOPATH目录可以是任意的，唯一的要求是`不能是你安装Go的目录`  
@@ -993,7 +993,145 @@ func main() {
 
 ```
 
-- Go封装一个对象，必须使用结构体（通过大小写是否导出），Go封装的单元是包而不是类型  
+- Go封装一个对象，必须使用结构体（通过大小写是否导出），Go封装的单元是包而不是类型
+
+- sublime-text安装 <https://www.iteye.com/blog/gxl-ct001-2441108>  
+自定义主题 <http://tmtheme-editor.herokuapp.com/#!/editor/local/Monokai>
+
+- 接口（抽象类（接口），派生类（结构体类型等）必须实现抽象类的所有方法）
+    - 一个接口类型定义了一套方法，如果一个具体类型要实现该接口，那么必须实现接口类型中定义的`所有方法`。（接口类型抽象类，具体类型相当于子类，必须实现抽象类的所有方法）
+    - 接口是一些方法的集合，而结构体是一些数据类型的集合，结构体的方法定义在声明之外？  
+
+```go
+type Reader interface {
+	Read() int
+	test()
+}
+
+func (p *MyReadWriter) Read() int {
+	return 1
+}
+
+type Closer interface {
+	Close() int
+}
+
+func (p *MyReadWriter) Close() int {
+	return 2
+}
+
+//组合了Reader和Closer的接口，同结构体，可展开接口方法使用
+type ReadWriter interface {
+	Read() int
+	Closer
+}
+
+type MyReadWriter struct {}
+
+func main() {
+	var s Reader
+	s = new(MyReadWriter) //本例报错，MyReadWriter没有实现test()方法
+	fmt.Println("",s.Read())
+}
+```
+
+- interface{} (空接口`类型`，它也是一种类型)，可以表示任何类型（接口的零值就是把它的动态类型的和值都设置为nil）  
+
+- 使用flag.Value来解析参数（设置全局falg值period2，flag.Parse()接收命令行参数，操作flag值）
+
+```go
+var period = flag.Duration("period2", 1 * time.Second, "sleep period")
+
+func main() {
+	flag.Parse()
+	fmt.Printf("Sleeping for %v...", *period)
+	time.Sleep(*period)
+	fmt.Println()
+}
+```
+
+- 接口**值**`可以用==和！=操作符来做比较`，如果两个接口值都是nil或者二者的动态类型完全一致且二者动态值相等（使用动态类型的==操作符来做比较），那么两个接口值相等（能比较就能作为map的键）。但需注意接口类型一致，但是值是不可比较的会导致崩溃（不矛盾）  
+- 部分数据类型要转成声明类型是因为声明的类型包含额外的方法（如rune？）
+- sort.Sort(data Interface)是接口的一个应用，类型实现了接口方法即可用于排序
+
+```go
+type Interface interface {
+	// Len is the number of elements in the collection.
+	Len() int
+	// Less reports whether the element with
+	// index i should sort before the element with index j.
+	Less(i, j int) bool
+	// Swap swaps the elements with indexes i and j.
+	Swap(i, j int)
+} 
+```
+
+```go
+package main
+
+import(
+	"fmt"
+	"time"
+	"os"
+	"sort"
+	"text/tabwriter"
+)
+
+type Track struct {
+	Title	string
+	Artist	string
+	Album	string
+	Year	int
+	Length	time.Duration
+}
+
+var tracks = []*Track {
+	{"Go", "Delilah", "From the Roots Up", 2012, length("3m38s")},
+	{"Go", "Moby", "Moby", 1992, length("3m37s")},
+	{"Go Ahead", "Alicia Keys", "As I Am", 2007, length("4m36s")},
+	{"Ready 2 Go", "Martin Solveig", "Smash", 2011, length("4m24s")},
+}
+
+func length(s string) time.Duration {
+	d, err := time.ParseDuration(s)
+	if err != nil {
+		panic(s)
+	}
+
+	return d
+}
+
+func printTracks(tracks []*Track) {
+	const format = "%v\t%v\t%v\t%v\t%v\t\n"
+	tw := new(tabwriter.Writer).Init(os.Stdout, 0, 8, 2, ' ', 0)
+	fmt.Fprintf(tw, format, "Title", "Artist", "Album", "Year", "Length")
+	fmt.Fprintf(tw, format, "-----", "-----", "-----", "-----", "-----")
+	for _, t := range tracks {
+		fmt.Fprintf(tw, format, t.Title, t.Artist, t.Album, t.Year, t.Length)
+	}
+
+	tw.Flush()
+}
+
+type byArtist []*Track
+
+func (x byArtist) Len() int {
+	return len(x)
+}
+
+func (x byArtist) Less(i, j int) bool {
+	return x[i].Artist < x[j].Artist
+}
+
+func (x byArtist) Swap(i, j int) {
+	x[i], x[j] = x[j], x[i]
+}
+
+func main() {
+	sort.Sort(byArtist(tracks)) //反序可用sort.Reverse无需再定义
+	printTracks(tracks)
+}
+```
 
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
@@ -1051,7 +1189,8 @@ l=24
 
 ### select语句（随机版switch）
 - select随机一个可运行的case，可运行退出
-- 若无default子句，select会阻塞，循环检测条件直到满足才退出循环
+- 若无
+- default子句，select会阻塞，循环检测条件直到满足才退出循环
 
 ### Go默认的`值传递`，调用过程不会影响到实际参数
 
