--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1133,6 +1133,217 @@ func main() {
 }
 ```
 
+- http.Handler接口
+
+```go
+//switch分发
+package main
+
+import(
+	"fmt"
+	"log"
+	"net/http"
+)
+
+type dollars float32
+
+func (d dollars) String() string {
+	return fmt.Sprintf("$%.2f",d)
+}
+
+type database map[string]dollars
+
+func (db database) ServeHTTP(w http.ResponseWriter, req *http.Request) {
+	switch req.URL.Path {
+	case "/list":
+		for item, price := range db {
+			fmt.Fprintf(w, "%s: %s\n", item, price)
+		}
+	case "/price":
+		item := req.URL.Query().Get("shoes")
+		price, ok := db[item]
+		if !ok {
+			w.WriteHeader(http.StatusNotFound)
+			return
+		}
+
+		fmt.Fprintf(w, "Price is : %s\n", price)
+	default:
+		w.WriteHeader(http.StatusNotFound)
+		fmt.Fprintf(w, "no such page: %s\n", req.URL)
+	}
+}
+
+func main() {
+	db := database{"shoes": 50, "socks": 5}
+	fmt.Println(db["shoes"])
+	log.Fatal(http.ListenAndServe("localhost:8000", db))
+}
+```  
+
+```go
+//多工转发器ServerMux
+package main
+
+import(
+	"fmt"
+	"log"
+	"net/http"
+)
+
+type dollars float32
+
+func (d dollars) String() string {
+	return fmt.Sprintf("$%.2f",d)
+}
+
+type database map[string]dollars
+
+func(db database) list(w http.ResponseWriter, req *http.Request) {
+	for item, price := range db {
+		fmt.Fprintf(w, "%s: %s\n", item, price)
+	}
+}
+
+func(db database) price(w http.ResponseWriter, req *http.Request) {
+	fmt.Println("this is price")
+	item := req.URL.Query().Get("shoes")
+	price, ok := db[item]
+	if !ok {
+		w.WriteHeader(http.StatusNotFound)
+		return
+	}
+
+	fmt.Fprintf(w, "Price is : %s\n", price)
+}
+
+func main() {
+	db := database{"shoes": 50, "socks": 5}
+	mux := http.NewServeMux()
+	mux.Handle("/list", http.HandlerFunc(db.list))
+	mux.Handle("/price", http.HandlerFunc(db.price))
+	log.Fatal(http.ListenAndServe("localhost:8000", mux))
+}
+
+/*使用系统的全局Mux变量DefaultServeMux，方法是HandleFunc（注意没有r）
+func main() {
+	db := database{"shoes": 50, "socks": 5}
+	http.HandleFunc("/list", db.list)
+	http.HandleFunc("/price", db.price)
+	log.Fatal(http.ListenAndServe("localhost:8000", nil))
+}
+*/
+```
+
+- 类型断言（`作用在接口值上`的操作，x.(T)其中`x是一个接口类型`的表达式，`T是一个类型`（称为断言类型））。实际上类型断言就是从它的操作数中把具体类型的值提出来的操作，如果检查失败那么操作崩溃。（判断是不是自己或者是不是自己的祖先？）
+
+    - 如果断言类型T是一个具体类型，那么类型断言会检查x的动态类型是否就是T，如果检查成功，那么断言的结果就是x的动态值，类型当然就是T。
+    - 如果断言类型T是一个接口类型，那么类型断言检查x的动态类型是否满足T，如果成功动态值没有提取出来，结果仍然还是一个接口值，接口值的类型和值部分也没有变更，`只是结果的类型为接口类型T`（类型断言是一个接口值表达式，从一个接口类型变为`拥有另外一套方法`的接口类型，但保留了接口值中的动态类型和动态值部分）。
+
+```go
+func test(x interface{}) {
+	switch x.(type) {
+	case int:
+		fmt.Println("this is int")
+	default:
+		fmt.Println("no found")
+	}
+}
+
+func main() {
+	test(1)
+}
+```
+
+```go
+package main
+
+import(
+	"fmt"
+)
+
+type IntOne interface {
+	Read() int
+}
+
+type IntTwo interface {
+	Read() int
+	Write() int
+}
+
+type TypeOne struct {}
+
+type TypeTwo struct {}
+
+
+func (t TypeOne) Read() int {
+	return 1
+}
+
+func (t TypeTwo) Read() int {
+	return 2
+}
+
+func (t TypeTwo) Write() int {
+	return 3
+}
+
+func main() {
+	var a IntOne = new(TypeOne)
+	var b IntTwo = new(TypeTwo)
+
+	fmt.Printf("a is type IntOne : %T\n", a.(IntOne))
+	if f, ok := a.(IntTwo); !ok { //同map及slice用于判断元素是否存在
+		fmt.Printf("a is type IntTwo error and type is : %T\n", f)
+	} else {
+		fmt.Printf("a is type IntTwo : %T\n", f)
+	}
+	fmt.Printf("b is type IntOne : %T\n", b.(IntOne))
+	fmt.Printf("b is type IntTwo : %T\n", b.(IntTwo))
+}
+/*输出结果
+a is type IntOne : *main.TypeOne
+a is type IntTwo error and type is : <nil>
+b is type IntOne : *main.TypeTwo
+b is type IntTwo : *main.TypeTwo
+
+*/
+```
+
+- 使用类型断言来识别错误。如果错误消息已被fmt.Errorf这类的方法合并到一个大字符串中，那么PathError的结构信息就丢失了，`错误识别通常必须失败操作发生时马上处理`。
+
+```go
+package main
+
+import(
+	"fmt"
+	"os"
+)
+
+// os包的PathError结构体
+// type PathError struct {
+// 	Op   string
+// 	Path string
+// 	Err  error
+// }
+
+func main() {
+	_, err := os.Open("/no/such/file")
+	fmt.Println(err)
+
+	if pErr, ok := err.(*os.PathError); ok {
+		fmt.Println(os.IsNotExist(pErr.Err))
+	}
+}
+```
+
+### go test工具
+
+以_test.go结尾的文件不是go build命令编译的目标，而是go test编译的目标。在*_test.go文件中，三种函数需要特殊对待（功能测试函数、基准测试函数、示例函数）。`go test工具扫描*_test.go文件来寻找特殊函数，并生成一个临时的main包来调用它们，然后编译和运行，并汇报结果，最后清空临时文件。`
+- 功能测试函数：以`Test`前缀命名的函数，用来检测一些程序逻辑的正确性（go test运行测试函数）
+- 基础测试函数：以`Benchmark`开头的函数，用来测试某些操作的性能（go test汇报操作的平均时间）
+- 示例函数：以`Example`开头的函数，用来提供机器检查过的文档
+
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
 
