--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1245,6 +1245,10 @@ func test(x interface{}) {
 	switch x.(type) {
 	case int:
 		fmt.Println("this is int")
+	case bool;
+		if x == true {
+			fmt.Println("true")
+		}
 	default:
 		fmt.Println("no found")
 	}
@@ -1337,6 +1341,194 @@ func main() {
 }
 ```
 
+- 使用类型断言来判定是否拥有某种方法。
+
+```go
+func writeString(w io.Writer, s string) (n int, err error) {
+	type stringWriter interface {
+		WriteString(string) (n int, err error)
+	}
+
+	if sw, ok := w.(stringWriter); ok { //用于判定io.Writer是否有WriteString方法
+		return sw.WriteString(s)
+	} 
+
+	...
+}
+```
+
+- 基于标记的xml解析
+
+```go
+package main
+
+import (
+	"encoding/xml"
+	"fmt"
+	"io"
+	"os"
+	"strings"
+	"net/http"
+)
+
+func containsAll(x, y []string) bool {
+	for len(y) <= len(x) {
+		if len(y) == 0 {
+			return true
+		}
+
+		if x[0] == y[0] {
+			y = y[1:]
+		}
+
+		x = x[1:]
+	}
+	return false
+}
+
+func main() {
+	url := "https://github.com/smakry"
+	resp,err := http.Get(url)
+	if err != nil {
+		fmt.Fprintf(os.Stderr,"fetch err:%v\n",err)
+		os.Exit(1)
+	}
+
+	dec := xml.NewDecoder(resp.Body)
+	defer resp.Body.Close()
+
+	var stack []string
+	for {
+		tok, err := dec.Token()
+		if err == io.EOF {
+			break
+		} else if err != nil {
+			fmt.Fprintf(os.Stderr, "xmlselect: %v\n", err)
+			os.Exit(1)
+		}
+
+		switch tok := tok.(type) {
+		case xml.StartElement:
+			stack = append(stack, tok.Name.Local)
+		case xml.EndElement:
+			stack = stack[:len(stack) - 1]
+		case xml.CharData:
+			if containsAll(stack, os.Args[1:]) {
+				fmt.Printf("%s: %s\n", strings.Join(stack, " "), tok)
+			}
+		}
+	}
+}
+```
+
+- 回声服务器
+
+```go
+//服务端
+package main
+
+import (
+	"fmt"
+	"strings"
+	"bufio"
+	"log"
+	"net"
+	"time"
+)
+
+func myConnect() {
+	listener, err := net.Listen("tcp", "localhost:8000")
+	if err != nil {
+		log.Fatal(err)
+	}
+	for {
+		conn, err := listener.Accept()
+		if err != nil {
+			log.Print(err)
+			continue
+		}
+
+		handleConn(conn)
+	}
+}
+
+func echo(c net.Conn, shout string, delay time.Duration) {
+	fmt.Fprintln(c, "\t", strings.ToUpper(shout))
+	time.Sleep(delay)
+	fmt.Fprintln(c, "\t", shout)
+	time.Sleep(delay)
+	fmt.Fprintln(c, "\t", strings.ToLower(shout))
+}
+
+func handleConn(c net.Conn) {
+	input := bufio.NewScanner(c)
+	for input.Scan() {
+		echo(c, input.Text(), 1 * time.Second)
+	}
+
+	c.Close()
+}
+
+func main() {
+	myConnect()
+}
+```
+
+```go
+//客户端
+package main
+
+import (
+	"io"
+	"os"
+	"log"
+	"net"
+)
+
+func myListen() {
+	conn, err := net.Dial("tcp", "localhost:8000")
+	if err != nil {
+		log.Fatal(err)
+	}
+	defer conn.Close()
+	go mustCopy(os.Stdout, conn)
+	mustCopy(conn, os.Stdin)
+}
+
+func mustCopy(dst io.Writer, src io.Reader){
+	if _, err := io.Copy(dst, src); err != nil {
+		log.Fatal(err)
+	}
+}
+
+func main() {
+	myListen()
+}
+```
+
+- 通道chan
+    - 像map一样，通道是一个使用make创建的数据结构的引用，当复制或者作为参数传递到一个函数时，复制的是引用，这样调用者和被调用者都引用同一份数据结构。
+    - 通道零值是nil。通道可以比较
+    - 通道支持关闭，关闭后的通道发送操作将导致宕机，而接收操作将获取所有已经发送的值，直到通道为空（同signal？） 
+
+- 无缓冲通道（make第2个参数是0或者无第2个参数），`发送操作将会阻塞`，直到`另一个`goroutine在对应的通道上执行接收操作（此时发送的goroutine将阻塞后续逻辑将不执行）
+
+```go
+func test(c chan int) {
+	fmt.Println(<- c)
+}
+
+func main() {
+	c := make(chan int)
+	go test(c)
+	x := 10
+	c <- x
+//	go test(c) //若goroutine在这调用会导致通道阻塞而执行不到这
+
+	time.Sleep(1 * time.Second)
+}
+```
+
 ### go test工具
 
 以_test.go结尾的文件不是go build命令编译的目标，而是go test编译的目标。在*_test.go文件中，三种函数需要特殊对待（功能测试函数、基准测试函数、示例函数）。`go test工具扫描*_test.go文件来寻找特殊函数，并生成一个临时的main包来调用它们，然后编译和运行，并汇报结果，最后清空临时文件。`
@@ -1402,6 +1594,47 @@ l=24
 - select随机一个可运行的case，可运行退出
 - 若无
 - default子句，select会阻塞，循环检测条件直到满足才退出循环
+
+```go
+func main() {
+	switch {
+	case true: //默认true
+		fmt.Println("true")
+	case false:
+		fmt.Println("false")
+	default:
+		fmt.Println("default")
+	}
+}
+/*输出结果
+true
+*/
+```
+
+```go
+func main() {
+	switch {
+	case false:
+		fmt.Println("false 1")
+	case true:
+		fmt.Println("true 1")
+		fallthrough //fallthrough强制执行后面的case内语句不检测case条件
+	case false:
+		fmt.Println("false 2")
+	case true:
+		fmt.Println("true 2")
+		fallthrough
+	case false:
+		fmt.Println("false 3")
+	default:
+		fmt.Println("default")
+	}
+}
+/*输出结果
+true 1
+false 2
+*/
+```
 
 ### Go默认的`值传递`，调用过程不会影响到实际参数
 
