--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1529,6 +1529,116 @@ func main() {
 }
 ```
 
+- goroutine泄漏（多个无缓冲通道，只接收了一个或者多个，部分没有接收，导致一直阻塞），泄漏的goroutine不会被自动回收
+
+```go
+func mirroredQuery() string {
+	responses := make(chan string)
+	go func() {responses <- "gorountine one"}()
+	go func() {responses <- "gorountine two"}()
+	go func() {responses <- "gorountine three"}()
+
+	return <- responses
+}
+```
+
+
+- 通道可通过"_, ok := <- 通道名"来判定是否已经关闭，通过close(通道名)的方式，若尝试关闭已经关闭的通道会导致宕机。同时可以通过range方式来做对应的通道接收，通道可通过垃圾回收器回收而不是通过close方式。
+
+```go
+package main
+
+import (
+	"fmt"
+)
+
+func main() {
+	naturals := make(chan int)
+	squares := make(chan int)
+
+	go func() {
+		for x := 0; x < 5 ; x++ {
+			naturals <- x
+		}
+
+		close(naturals)
+	}()
+
+	go func() {
+		for {
+			x, ok := <- naturals
+			if !ok { //通过接收方式判定
+				break
+			}
+			squares <- x * x	
+		}
+		
+		close(squares)
+	}()
+
+	for y := range squares { //通过range判定
+		fmt.Println(y)
+	}
+}
+```
+
+- 通道作为函数参数（`双向通道可隐式转成单向通道，但是反过来是不成立的`）
+     - func test(c chan int) //c是一个双向通道允许收发
+     - func test(c chan<- int) //c是一个单向通道，仅允许发（通过<-指向的chan记忆）
+     - func test(c <-chan int) //c是一个单向通道，仅允许收
+
+- 缓冲通道（make的第2个参数指定缓冲大小），缓冲通道实际上是一个队列。当队列满了以后通道一样阻塞
+
+- 并行循环
+
+```go
+func handleFile(filenames []string) {
+	ch := make(chan struct{})
+	for _, f := range filenames {
+		go func(f string) {
+			//各文件单独循环
+			ch <- struct{}{}
+		}(f) //此处一定要显示的调用，如果不是f作为一个变量地址不变，每次循环f值是变化的
+	}
+
+	for range filenames { //这个是必要的，等待所有的文件都处理完成，若没有接收，goroutine可能没执行完成就已经被主goroutine结束了
+		<- ch
+	}
+}
+```
+
+```go
+//计数器sync.WaitGroup
+func makeThumnail(filenames <-chan string) int64 {
+	sizes := make(chan int64)
+	var wg sync.WaitGroup
+	for f := range filenames {
+		wg.Add(1)
+		go func(f string) {
+			defer wg.Done() //保证一定会调用
+			x, err := test()
+			if err != nil {
+				log.Println(err)
+				return
+			}
+
+			sizes <- x
+		}(f)
+	}
+
+	go func() {
+		wg.Wait()
+		close(sizes)
+	}()
+
+	var total int64
+	for size := range sizes {
+		total += size
+	}
+	return total
+}
+```
+
 ### go test工具
 
 以_test.go结尾的文件不是go build命令编译的目标，而是go test编译的目标。在*_test.go文件中，三种函数需要特殊对待（功能测试函数、基准测试函数、示例函数）。`go test工具扫描*_test.go文件来寻找特殊函数，并生成一个临时的main包来调用它们，然后编译和运行，并汇报结果，最后清空临时文件。`
