--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1639,6 +1639,23 @@ func makeThumnail(filenames <-chan string) int64 {
 }
 ```
 
+- 标签化的break语句
+
+```go
+func main() {
+
+flag:
+    for {
+        for {
+            time.Sleep(1 * time.Second)
+            break flag //跳出循环到flag层
+        }
+        fmt.Println("ggoo")
+    }
+
+}
+```
+
 ### go test工具
 
 以_test.go结尾的文件不是go build命令编译的目标，而是go test编译的目标。在*_test.go文件中，三种函数需要特殊对待（功能测试函数、基准测试函数、示例函数）。`go test工具扫描*_test.go文件来寻找特殊函数，并生成一个临时的main包来调用它们，然后编译和运行，并汇报结果，最后清空临时文件。`
@@ -1697,13 +1714,7 @@ l=24
 //k=3<<iota(1+1) l=3<<iota(1+1+1)
 ```
 
-### 运算
-- go`不支持前++`，i++是一种语句，而非表达式（不同于C族语言，`j = i++ 是不合法的`）
-
-### select语句（随机版switch）
-- select随机一个可运行的case，可运行退出
-- 若无
-- default子句，select会阻塞，循环检测条件直到满足才退出循环
+- switch
 
 ```go
 func main() {
@@ -1744,6 +1755,118 @@ func main() {
 true 1
 false 2
 */
+```
+
+- 通道轮询（select语句尝试从通道接收一个值，如果没有值，它什么也不做，这是一个非阻塞的接收操作，重复这个动作称为对通道轮询）
+```go
+select{
+case <- abort:
+	fmt.Printf("abort\n")
+	return
+default:
+	//do nothing
+}
+```
+
+- 让多个goroutine停止（利用通道关闭，且已经取完所有发送的值之后，接下来的接收操作立即返回，得到零值。利用它创建广播机制）
+
+```go
+package main
+
+import (
+    "fmt"
+    "time"
+)
+
+func main() {
+
+    x := make(chan struct{})
+
+    go func() {
+        time.Sleep(1 * time.Second)
+        close(x)
+    }()
+    
+    for i := 0; i < 5; i++ {
+        go func(c chan struct{}, in int) {
+            for { 
+                time.Sleep(1 * time.Second / 5)
+                select {
+                case x := <-c: //1s后通道关闭，此处接收的是c的零值struct{}{}
+                    fmt.Printf("%T, %[1]v", x)
+                    fmt.Println("this is case c")
+                default: //1s内通道未关闭，执行默认逻辑
+                    fmt.Println("this is Defalut")
+                }   
+            }
+        }(x, i)
+    }
+
+    time.Sleep(3 * time.Second)
+}
+```
+
+- 并发安全（考虑一个能在串行程序中正确工作的函数，如果这个函数在`并发调用时仍然能正确工作`，那么这个函数是并发安全。）
+- 竞态（多个goroutine按某些交错顺序执行时程序无法给出正确的结果）。数据竞态（发生于两个goroutine`并发读写`同一个变量且至少其中一个是写入时，比如：a写入200，同时b写入100，竞态最后只写入了200）。避免数据竞态的方式： 
+    - 不要修改变量
+    - 避免从多个goroutine访问同一个变量（当多个goroutine会访问到同一个变量，可以通过控制让同一时刻只有一个goroutine可以访问）
+    - 互斥机制
+
+- 一个计数`上限为1的信号量`称为二进制信号量
+- 临界区域（在`互斥锁Lock和Unlock之间的代码`，可以自由地读取和修改共享变量，这一部分称为临界区域）
+- 读写互斥锁sync.RWMutex（允许只读操作可以并发执行，但写操作需要获得完全独享的访问权限。也叫做多读单写锁。多读可能同时发生了写所以需要这个读锁而不直接抛弃读锁的原因？）。RLock()和RUnlock()分别获取和释放一个读锁（也称为共享锁）.
+    - RLock仅可用于临界区域内对共享变量无写操作的情形。
+    - 仅在绝大部分goroutine都在获取读锁且锁竞争比较激烈时（即goroutine一般都需要等待后才能获得锁），RWMutex才有优势。因为`RWMutex需要更复杂的内部簿记工作`，所以`在竞争不激烈时它比普通的互斥锁慢` 
+
+
+- Go箴言“不要通过共享内存来通信，而应该通过通信来共享内存”。（单个goroutine操作可能是竞态数据，通过通信方式避免竞态数据）。使用通道请求来代理一个受限变量的所有访问的goroutine称为该变量的监控goroutine
+
+### 运算
+- go`不支持前++`，i++是一种语句，而非表达式（不同于C族语言，`j = i++ 是不合法的`）
+
+### select语句（随机版通信switch）
+- 类似于用于通信的switch语句，`每个case必须是一个通信操作`，要么是发送要么是接收
+- select随机执行一个可运行的case。如果没有case可运行，它将阻塞，直到有case可运行，一个默认的（default）子句应该总是可运行的
+- `所有channel表达式都会被求值`，Go不会重新对channel或值进行求值
+- 如果只某个通信可以进行，它就执行，其它的被忽略
+- 如果有多个case都可以运行，select会`随机公平地选出一个执行`，其它不会执行。
+- 如果没有任何case可执行：
+    - 有default子句，则执行default子句（default必须是可执行的）
+    - 没有default子句，`select阻塞`，直到某个通信可以运行，`Go不会重新对channel或值进行求值`
+
+```go
+func Chann(ch chan int, stopCh chan bool) {
+	var i int
+	i = 10
+	for j := 0; j < 10; j++ {
+		ch <- i
+		time.Sleep(time.Second)
+	}
+
+	stopCh <- true
+}
+
+func main() {
+	ch := make(chan int)
+	c := 0
+	stopCh := make(chan bool)
+	go Chann(ch, stopCh)
+
+	for {
+		select {
+//		case true: //报错，case子句必须是通信操作要么发送要么接收
+//			fmt.Println("this is true")
+		case c = <- ch:
+			fmt.Println("Receive ", c, "channel")
+		case s := <- ch:
+			fmt.Println("Receive ", s)
+		case _ = <- stopCh:
+			goto end
+		}
+	}
+
+end:
+}
 ```
 
 ### Go默认的`值传递`，调用过程不会影响到实际参数
