--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1509,7 +1509,7 @@ func main() {
 - 通道chan
     - 像map一样，通道是一个使用make创建的数据结构的引用，当复制或者作为参数传递到一个函数时，复制的是引用，这样调用者和被调用者都引用同一份数据结构。
     - 通道零值是nil。通道可以比较
-    - 通道支持关闭，关闭后的通道发送操作将导致宕机，而接收操作将获取所有已经发送的值，直到通道为空（同signal？） 
+    - 通道支持关闭，关闭后的通道发送操作将导致宕机，而`接收操作将获取所有已经发送的值，直到通道为空`（同signal？） 
 
 - 无缓冲通道（make第2个参数是0或者无第2个参数），`发送操作将会阻塞`，直到`另一个`goroutine在对应的通道上执行接收操作（此时发送的goroutine将阻塞后续逻辑将不执行）
 
@@ -1656,6 +1656,281 @@ flag:
 }
 ```
 
+- 以下可能的输出结果，由于多核，goroutine在不同的CPU上执行（拥有自己独立的缓存，彼此之间不可见），也就不是简单的多个goroutine交错执行。（CPU缓存在同步到内存之前的这段期间，不同的goroutine是不可见）
+
+```go
+var x, y int
+go func() {
+	x = 1
+	fmt.Print("y:", y, " ")
+}()
+
+go func() {
+	y = 1
+	fmt.Print("x:", x, " ")
+}()
+/*可能结果
+x,y的先后顺序以及各种值都有可能
+*/
+```
+
+- 通道轮询（select语句尝试从通道接收一个值，如果没有值，它什么也不做，这是一个非阻塞的接收操作，重复这个动作称为对通道轮询）
+```go
+select{
+case <- abort:
+	fmt.Printf("abort\n")
+	return
+default:
+	//do nothing
+}
+```
+
+- 让多个goroutine停止（利用通道关闭，且已经取完所有发送的值之后，接下来的接收操作立即返回，得到零值。利用它创建广播机制）
+
+```go
+package main
+
+import (
+    "fmt"
+    "time"
+)
+
+func main() {
+
+    x := make(chan struct{})
+
+    go func() {
+        time.Sleep(1 * time.Second)
+        close(x)
+    }()
+    
+    for i := 0; i < 5; i++ {
+        go func(c chan struct{}, in int) {
+            for { 
+                time.Sleep(1 * time.Second / 5)
+                select {
+                case x := <-c: //1s后通道关闭，此处接收的是c的零值struct{}{}
+                    fmt.Printf("%T, %[1]v", x)
+                    fmt.Println("this is case c")
+                default: //1s内通道未关闭，执行默认逻辑
+                    fmt.Println("this is Defalut")
+                }   
+            }
+        }(x, i)
+    }
+
+    time.Sleep(3 * time.Second)
+}
+```
+
+- 并发安全（考虑一个能在串行程序中正确工作的函数，如果这个函数在`并发调用时仍然能正确工作`，那么这个函数是并发安全。）
+- 竞态（多个goroutine按某些交错顺序执行时程序无法给出正确的结果）。数据竞态（发生于两个goroutine`并发读写`同一个变量且至少其中一个是写入时，比如：a写入200，同时b写入100，竞态最后只写入了200）。避免数据竞态的方式： 
+    - 不要修改变量
+    - 避免从多个goroutine访问同一个变量（当多个goroutine会访问到同一个变量，可以通过控制让同一时刻只有一个goroutine可以访问）
+    - 互斥机制
+
+- 一个计数`上限为1的信号量`称为二进制信号量
+- 临界区域（在`互斥锁Lock和Unlock之间的代码`，可以自由地读取和修改共享变量，这一部分称为临界区域）
+- 读写互斥锁sync.RWMutex（允许只读操作可以并发执行，但写操作需要获得完全独享的访问权限。也叫做多读单写锁。多读可能同时发生了写所以需要这个读锁而不直接抛弃读锁的原因？）。RLock()和RUnlock()分别获取和释放一个读锁（也称为共享锁）.
+    - RLock仅可用于临界区域内对共享变量无写操作的情形。
+    - 仅在绝大部分goroutine都在获取读锁且锁竞争比较激烈时（即goroutine一般都需要等待后才能获得锁），RWMutex才有优势。因为`RWMutex需要更复杂的内部簿记工作`，所以`在竞争不激烈时它比普通的互斥锁慢` 
+
+```go
+var mu sync.RWMutex
+var icons map[string]image.Image
+
+func Icon(name string) image.Image {
+	mu.RLock() //读锁（共享锁）
+	if icons != nil {
+		icon := icons[name]
+		mu.RUnlock()
+		return icon
+	}
+	mu.RUnlock() //不释放共享锁无法直接升级到互斥锁
+
+	mu.Lock() 
+	if icons == nil { //同样需要判断是否存在可能其它的goroutine同步在初始化
+		loadIcons() //icons初始化方法
+	}
+	icon := icons[name]
+	mu.Unlock()
+	return icon
+}
+```
+
+```go
+//使用sync包的Once简化上面的方法（本质就是用一个互斥锁来标记数据是否已经被初始化过）
+var loadIconsOnce sync.Once
+var icons map[string]image.Image
+
+func Icon(name string) image.Image {
+	loadIconsOnce.Do(loadIcons)
+	return icons[name]
+}
+```
+
+- Go箴言“不要通过共享内存来通信，而应该通过通信来共享内存”。（单个goroutine操作可能是竞态数据，通过通信方式避免竞态数据）。使用通道请求来代理一个受限变量的所有访问的goroutine称为该变量的监控goroutine
+
+- 竞态检测器。简单地把`-race命令行参数`加到go build、go run、go test命令里边即可使用该功能，它会让`编译器`为你的应用或者测试构建一个修改后的版本。这个版本有额外的手法用于高效记录在执行时对共享变量的所有访问，以及读写这些变量的goroutine标识。修改后的版本还会记录所有的同步事件，包括go语句、通道操作、(*sync.Mutex).Lock调用、(*sync.WaitGroup).Wait调用等。（完整的同步事件集合可以在语言规范中“The Go Memory Model”文档中找到） 
+
+- 并发非阻塞缓存
+
+```go
+// 共享变量并上锁
+type Memo struct {
+	f		Func
+	cache	map[string]*entry
+}
+
+type Func func(key string) (interface{}, error) {}
+
+type result struct {
+	value	interface{}
+	err		error
+}
+
+type entry struct {
+	res		result
+	ready	chan struct{}
+}
+
+func New(f Func) *Memo {
+	return &Memo{f: f, cache: make(map[string]*entry)}
+}
+
+func (memo *Memo) Get(key string) (value interface{}, err error) {
+	memo.mu.Lock()
+	e := memo.cache[key]
+	if e == nil {
+		e = &entry{ready: make(chan struct{})}
+		memo.cache[key] = e
+		memo.mu.Unlock()
+
+		e.res.value, e.res.err = memo.f(key)
+		close(e.ready)
+	} else {
+		memo.mu.Unlock()
+		<-e.ready
+	}
+
+	return e.res.value, e.res.err
+}
+
+func test() {
+	m := New(httpGetBody)
+	var n sync.WaitGroup
+	for url := range incomingURLs() {
+		n.Add(1)
+		go func(url string) {
+			start := time.Now()
+			value, err := m.Get(url)
+			if err != nil {
+				log.Print(err)
+			}
+
+			fmt.Printf("%s, %s, %d bytes\n", url, time.Since(start), len(value.([]byte)))			
+			n.Done()
+		}
+	}
+
+	n.Wait()
+}
+```
+
+```go
+// 通信顺序进程方案
+func test() {
+	m := New(httpGetBody) //httpGetBody为爬取函数
+	var n sync.WaitGroup
+	for url := range incomingURLs() {
+		n.Add(1)
+		go func(url string) {
+			start := time.Now()
+			value, err := m.Get(url)
+			if err != nil {
+				log.Print(err)
+			}
+
+			fmt.Printf("%s, %s, %d bytes\n", url, time.Since(start), len(value.([]byte)))			
+			n.Done()
+		}
+	}
+
+	n.Wait()
+}
+
+type Func func(key string) (interface{}, error)
+
+type result struct {
+	value	interface{}
+	err		error
+}
+
+type entry struct {
+	res		result
+	ready	chan struct{}
+}
+
+type request struct {
+	key			string
+	response	chan<- result
+}
+
+type Memo struct {
+	requests	chan request
+}
+
+func New(f Func) *Memo {
+	memo := &Memo{requests: make(chan request)}
+	go memo.server(f)
+	return memo
+}
+
+func (memo *Memo) Get(key string) (interface(), error) {
+	response := make(chan result)
+	memo.requests <- result{key, response}
+	res := <-response
+	return res.value, res.err
+}
+
+func (memo *Memo) Close() {
+	close(memo.requests)
+}
+
+func (memo *Memo) server(f Func) {
+	cache := make(map[string]*entry)
+	for req := range memo.requests {
+		e := cache[req.key]
+		if e == nil {
+			e = &entry{ready: make(chan struct{})}
+			cache[req.key] = e
+			go e.call(f, req.key)
+		}
+		go e.deliver(req.response)
+	}
+}
+
+func (e *entry) call(f Func, key string) {
+	e.res.value, e.res.err = f(key)
+	close(e.ready)
+}
+
+func (e *entry) deliver(response chan<- result) {
+	<-e.ready
+	response <- e.res
+}
+```
+
+- goroutine与操作系统线程的差别
+    - **栈增长方式**：
+        - `goroutine是可增长的栈`。典型情况下初始大小2kb，栈可动态扩容到1GB，按需增大和缩小。
+        - OS线程是固定大小的栈内存（通常是2MB） 
+	- **调度方式**：
+        - OS线程由OS内核来调度。每隔几毫秒，一个硬件时钟中断发到CPU，CPU调用一个叫调度器的内核函数。这个函数暂停当前正在运行的线程，把它的寄存器信息保存在内存，查看线程列表并决定接下来运行哪个线程，再从内存恢复线程的注册表信息，最后继续执行选中的线程。因为OS线程由内核来调度，所以控制权限从一个线程到另外一个线程需要一个完整的`上下文切换`：即保存一个线程的状态到内存，再恢复另外一个线程的状态，最后更新调度器的数据结构。考虑这个操作涉及的内存局域性以及涉及的内存访问数量，还是有访问内存所需要的CPU周期数量的增加，这个操作是很慢的。（需要`切换内存及缓存`？）
+        - Go包含一个自己的调度器，这个调度器使用一个称为`m:n调度`的技术（因为它可以复用/调度m个goroutine到n个OS线程）。Go调度器与内核调度器的工作类似，但Go调度器`只需关心单个Go程序的goroutine调度问题`。Go调度器不是由硬件时钟来定期触发的，而是由特定的Go语言结构来触发的。比如当一个goroutine调用time.Sleep或者被通道阻塞或对互斥量操作时，调度器就会将这个goroutine设为休眠模式，并运行其它goroutine直到前一个可重新唤醒为止。因为它`不需要切换到内核语境`，所以调用一个goroutine比调度一个线程成本低很多。（单个Go程序的调度相对系统级别量少很多）。
+    - **GOMAXPROCS**：Go调度器使用GOMAXPROCS参数来确定需要使用多少个OS线程来同时执行Go代码。`默认值是机器上的CPU数量`，所以在一个有8个CPU的机器上，调度器会把Go代码同时调度到8个OS线程上。（GOMAXPROCS是m:n调度中的n）正在休眠或者正被通道通信阻塞的goroutine不需要占用线程。阻塞在I/O和其它系统调用中或调用非Go语言写的函数的goroutine需要一个独立的OS线程，但这个线程不计算在GOMAXPROCS内。
+    - **goroutine没有标识**：
+
 ### go test工具
 
 以_test.go结尾的文件不是go build命令编译的目标，而是go test编译的目标。在*_test.go文件中，三种函数需要特殊对待（功能测试函数、基准测试函数、示例函数）。`go test工具扫描*_test.go文件来寻找特殊函数，并生成一个临时的main包来调用它们，然后编译和运行，并汇报结果，最后清空临时文件。`
@@ -1756,70 +2031,6 @@ true 1
 false 2
 */
 ```
-
-- 通道轮询（select语句尝试从通道接收一个值，如果没有值，它什么也不做，这是一个非阻塞的接收操作，重复这个动作称为对通道轮询）
-```go
-select{
-case <- abort:
-	fmt.Printf("abort\n")
-	return
-default:
-	//do nothing
-}
-```
-
-- 让多个goroutine停止（利用通道关闭，且已经取完所有发送的值之后，接下来的接收操作立即返回，得到零值。利用它创建广播机制）
-
-```go
-package main
-
-import (
-    "fmt"
-    "time"
-)
-
-func main() {
-
-    x := make(chan struct{})
-
-    go func() {
-        time.Sleep(1 * time.Second)
-        close(x)
-    }()
-    
-    for i := 0; i < 5; i++ {
-        go func(c chan struct{}, in int) {
-            for { 
-                time.Sleep(1 * time.Second / 5)
-                select {
-                case x := <-c: //1s后通道关闭，此处接收的是c的零值struct{}{}
-                    fmt.Printf("%T, %[1]v", x)
-                    fmt.Println("this is case c")
-                default: //1s内通道未关闭，执行默认逻辑
-                    fmt.Println("this is Defalut")
-                }   
-            }
-        }(x, i)
-    }
-
-    time.Sleep(3 * time.Second)
-}
-```
-
-- 并发安全（考虑一个能在串行程序中正确工作的函数，如果这个函数在`并发调用时仍然能正确工作`，那么这个函数是并发安全。）
-- 竞态（多个goroutine按某些交错顺序执行时程序无法给出正确的结果）。数据竞态（发生于两个goroutine`并发读写`同一个变量且至少其中一个是写入时，比如：a写入200，同时b写入100，竞态最后只写入了200）。避免数据竞态的方式： 
-    - 不要修改变量
-    - 避免从多个goroutine访问同一个变量（当多个goroutine会访问到同一个变量，可以通过控制让同一时刻只有一个goroutine可以访问）
-    - 互斥机制
-
-- 一个计数`上限为1的信号量`称为二进制信号量
-- 临界区域（在`互斥锁Lock和Unlock之间的代码`，可以自由地读取和修改共享变量，这一部分称为临界区域）
-- 读写互斥锁sync.RWMutex（允许只读操作可以并发执行，但写操作需要获得完全独享的访问权限。也叫做多读单写锁。多读可能同时发生了写所以需要这个读锁而不直接抛弃读锁的原因？）。RLock()和RUnlock()分别获取和释放一个读锁（也称为共享锁）.
-    - RLock仅可用于临界区域内对共享变量无写操作的情形。
-    - 仅在绝大部分goroutine都在获取读锁且锁竞争比较激烈时（即goroutine一般都需要等待后才能获得锁），RWMutex才有优势。因为`RWMutex需要更复杂的内部簿记工作`，所以`在竞争不激烈时它比普通的互斥锁慢` 
-
-
-- Go箴言“不要通过共享内存来通信，而应该通过通信来共享内存”。（单个goroutine操作可能是竞态数据，通过通信方式避免竞态数据）。使用通道请求来代理一个受限变量的所有访问的goroutine称为该变量的监控goroutine
 
 ### 运算
 - go`不支持前++`，i++是一种语句，而非表达式（不同于C族语言，`j = i++ 是不合法的`）
